# Umbra

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  aur  build.sh  clean.sh  configure  distclean.sh  nbuild.py  npkg  nyx.py  repo.json  run.sh
aurora/: .dockerignore  Dockerfile  Makefile  docker-build.sh  requirements.txt  setup.py
aurora/aurora/: config.py  matcher.py  package.py  packagelist.py  repository.py  universe.py
config/: armv8-rpi.cmake  i686.cmake  x86_64.cmake
docs/: Memory.md
nyx/: build_coordinator.py  engine.py  globals.py  json.py  nbuild.py  nyx.py  package.py
nyx/docker/: Dockerfile  build.sh
nyx/docs/: Nyx.md
nyx/nyx/: README.md  engine.py  json.py  log.py  package.py
nyx/scripts/: setup-limine.sh  x86-create-iso.sh  x86-run-debug.sh  x86-run.sh  x86_64-create-iso.sh  x86_64-run-debug.sh
nyx/targets/: armv7-cortex-a15.cmake  i686-clang.cmake  i686.cmake  x86_64.cmake
repo/: boot.json  lib.json  meta.json  sys.json  tool.json
repo/apps/: test-program-dev.json
repo/boot/: limine-2.0.json
scripts/: build-rpi.sh  x86-create-iso.sh  x86-run.sh
src/: CMakeLists.txt
src/app/test-program/: Makefile  main.c
src/apps/: CMakeLists.txt
src/apps/test_program/: CMakeLists.txt  Makefile  main.c  main.s
src/boot/: CMakeLists.txt
src/boot/loader/: CMakeLists.txt  alloc.c  console.c  elf64.c  panic.c  printf.c  system.c
src/boot/loader/arch/x86/: console.c  multiboot.c
src/boot/loader/include/: alloc.h  console.h  stdio.h  system.h
src/boot/loader/include/elf/: elf32.h  elf64.h
src/boot/loader/include/i686/: modules.h  multiboot.h
src/boot/loader/mach/i686/: linker.ld  main.c  start.s
src/boot/loader/x86/i686/: console.c  gdt.s  kernel.c  main.c  multiboot_header.s  multiboot_info.c  start.s
src/lib/: CMakeLists.txt  README.md
src/lib/c/: CMakeLists.txt  Makefile
src/lib/c/include/: stdio.h  stdlib.h  string.h
src/lib/c/include/sys/: cdefs.h
src/lib/c/stdio/: vprintf.c
src/lib/c/stdlib/: atoi.c  itoa.c
src/lib/c/string/: memcpy.c
src/lib/libc/: Makefile  init.c  syscalls.c
src/lib/libc/include/: stdint.h  stdio.h  stdlib.h  string.h  unistd.h
src/lib/libc/include/decl/: decl_FILE.h
src/lib/libc/include/sys/: syscall.h  types.h
src/lib/libc/stdio/: fopen.c  fwrite.c  getchar.c  putchar.c  puts.c  vprintf.c
src/lib/libc/stdlib/: abs.c  atoi.c  exit.c  itoa.c
src/lib/libc/string/: memcpy.c  strcmp.c  strlen.c
src/lib/libc/x86_64/: crt0.s
src/sys/kernel/: CMakeLists.txt  Makefile  cpu.cpp  create-symbols.py  critical.cpp  cxx.cpp  elf.cpp  interrupts.cpp  keycode.cpp  log.cpp  main.cpp  object.cpp  panic.cpp  scheduler.cpp  syscall.cpp  thread.cpp  time.cpp  vfs.cpp
src/sys/kernel/arch/arm/v7a/cortex-a15/: start.s  uart.cpp
src/sys/kernel/arch/arm/v8/: exception_level.s  interrupt_handlers.cpp  interrupts.s
src/sys/kernel/arch/x86/: gdt.cpp  paging.cpp  ports.cpp  vga_text_console.cpp
src/sys/kernel/arm/v7a/cortex-a15/: entry.cpp
src/sys/kernel/arm/v8/rpi/: entry.cpp  exceptions.s  rpi.cpp  spinlock.s  start.s
src/sys/kernel/arm/v8/rpi/devices/: rpi_uart0.cpp  timer.cpp
src/sys/kernel/debug/: symbols.cpp
src/sys/kernel/hal/: interrupts.cpp
src/sys/kernel/include/: assert.h  config.h.in
src/sys/kernel/include/kernel/: config.h  cpu.h  critical.h  delay.h  elf.h  icxxabi  interrupts.h  log.h  mem_utils.h  object.h  optional.h  panic.h  regs.h  scheduler.h  spinlock.h  string.h  syscall.h  system.h  task.h  text_console.h  thread.h  time.h  types.h  version.h
src/sys/kernel/include/kernel/arm/: uart_text_console.h
src/sys/kernel/include/kernel/arm/rpi/: bcm2837.h  rpi.h  rpi_uart0.h
src/sys/kernel/include/kernel/boot/: boot_file.h  multiboot.h  stivale2.h
src/sys/kernel/include/kernel/data/: font-unscii.h
src/sys/kernel/include/kernel/debug/: symbol-file.h
src/sys/kernel/include/kernel/hal/: fb_text_console.h  keyboard.h  keycodes.h  sw_framebuffer.h  terminal.h  timer.h
src/sys/kernel/include/kernel/mm/: heap.h  memory.h  pmm.h  pmm_new.h  slab.h  vas.h  vmm.h  vmo.h
src/sys/kernel/include/kernel/tasks/: critical_section.h  elf.h  elfloader.h  scheduler.h  syscall.h  task.h  thread.h
src/sys/kernel/include/kernel/util/: bitmap.h  buddy_bitmap.h  buffer.h  linked_list.h  math.h  ref.h  result.h  ring_buffer.h  spinlock.h  string.h
src/sys/kernel/include/kernel/vfs/: delegate.h  dir_cache.h  filesystem.h  initrd.h  node.h  path.h  tmpfs.h  types.h  vfs.h
src/sys/kernel/include/kernel/x86/: cpu.h  descriptor_table.h  gdt.h  interrupts.h  pager.h  paging.h  pit.h  ports.h  ps2keyboard.h  regs.h  serial_text_console.h  vas.h  vga_text_console.h
src/sys/kernel/include/public/: dummy.h
src/sys/kernel/include/stl/: algorithm  list  optional  string  string_view  utility
src/sys/kernel/log/: fb_text_console.cpp  log.cpp  panic.cpp
src/sys/kernel/mach/i686/: entry.cpp  gdt.s  interrupt_handlers.s  interrupts.cpp  multiboot_header.s  start.s  thread.s
src/sys/kernel/mach/raspi/: entry.cpp  linker.ld  start.s
src/sys/kernel/mach/raspi/devices/: bcm2837.cpp
src/sys/kernel/mach/x86_64/: halt.s  stack.s  start.s
src/sys/kernel/mm/: heap.cpp  memory.cpp  pmm.cpp  slab.cpp  vmm.cpp
src/sys/kernel/tasks/: critical_section.cpp  elf.cpp  loader.cpp  scheduler.cpp  syscall.cpp
src/sys/kernel/vfs/: initrd.cpp  tmpfs.cpp  vfs.cpp
src/sys/kernel/x86/: descriptor_tables.cpp  interrupts.cpp  paging.cpp  syscall.cpp  thread.cpp  vas.cpp  vga_text_console.cpp
src/sys/kernel/x86/drivers/: pit.cpp  ps2kb.cpp  serial_text_console.cpp  vga_text_console.cpp
src/sys/kernel/x86/i686/: entry.cpp  interrupt_handlers.s  interrupts.cpp  linker.ld  multiboot_header.s  pager.cpp  start.s  thread.s  vas.cpp
src/sys/kernel/x86/x86_64/: entry.cpp  gdt.s  interrupt_handlers.s  linker.ld  memory.cpp  pager.cpp  stack.s  stivale.cpp  thread.s  vas.cpp
src/sys/klibc/: Makefile
src/sys/klibc/include/sys/: cdefs.h
src/sys/klibc/stdio/: printf.c
src/sys/klibc/stdlib/: abort.c
src/sys/klibc/string/: memcpy.c  memmove.c  memset.c  strncpy.c
(+30 files in other folders)
